--- a/assets/styles.css
+++ b/assets/styles.css
@@ -8,153 +8,145 @@
 
 }
 
+body {
+
+    height: 100vh;
+    width: 100vw;
+   
+}
+
+hr {
+    margin-top: 2px;
+    width: 20%;
+    border: 2px solid;
+    border-radius: 25%;
+}
+
 a {
     text-decoration: none;
     color: black;
 }
 
+section {
 
-
-.logo {
-    position: absolute;
-    width: 213px;
-    height: 94px;
-    left: 32px;
-    top: 29px;
-
-
-
+    display: flex;
+    flex-wrap: wrap;
 }
 
-.acesso-informacao {
-    position: absolute;
-    width: 463px;
-    height: 307px;
-    left: 4px;
-    top: 22px;
 
+.principal {
+    width: 50%;
+    margin: 29px 0px 0px 32px
 }
 
 .titulo {
-    position: absolute;
-    width: 321px;
+    width: 219px;
     height: 26px;
-    left: 32px;
-    top: 155px;
-
+    margin-top: 42px;
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 700;
     font-size: 24px;
     line-height: 110%;
     /* or 26px */
-
     display: flex;
     align-items: center;
     letter-spacing: -0.025em;
-
     color: #2F2F2F;
 
 }
 
 .subtitulo {
-    position: absolute;
-    width: 700px;
+    width: 445px;
     height: 31px;
-    left: 32px;
-    top: 203px;
+    margin-top: 26px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    font-size: 18px;
-    line-height: 20px;
+    font-size: 16px;
+    line-height: 16px;
     color: #505050;
+}
+
+.info-grid {
+    /* width: 463px;
+    height: 307px; */
+    margin-top: 32px;
+    display: grid;
+    grid-template-columns: 200px 200px;
+    grid-template-rows: 1fr 1fr;
+    gap: 20px;
+    
 
 }
+
+/* .itens{
+    background-color: #2f2f2f0b;
+
+
+} */
 
 .icons {
-    width: 50px;
-    height: 50px;
+    width: 42;
+    height: 42px;
 
-}
-
-.wpp {
-    /* position: absolute;
-    width: 138px;
-    height: 32px;
-    left: 32px;
-    top: 289px; */
-
-    position: absolute;
-    width: 138px;
-    height: 32px;
-    left: 32px;
-    top: 270px;
-
-}
-
-.tel {
-
-    position: absolute;
-    width: 131px;
-    height: 32px;
-    left: 32px;
-    top: 340px;
-
-}
-
-.mail {
-    position: absolute;
-    width: 312px;
-    height: 32px;
-    left: 32px;
-    top: 410px;
-
-}
-
-.address {
-
-    position: absolute;
-    width: 463px;
-    height: 48px;
-    left: 32px;
-    top: 480px;
 }
 
 .text-icons {
-    position: absolute;
-    top: 10px;
-    margin-left: 5px;
-    width: 153px;
-    height: 32px;
-}
-
-.text-address{
-    position: absolute;
-    width: 450px;
-    height: 48px;
-    margin-left: 54px;
-    top: 15px;
+    position: relative;
+    width: 87px;
+    height: 16px;
+    left: 10px;
+    top: -16px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 400;
-    line-height: 20px;
-    color: #505050;
-    font-size: 14px;
+    font-size: 15px;
+    line-height: 16px;
 }
 
-.text-address-bold{
-    position: absolute;
-    width: 435px;
-    height: 48px;
-    margin-left: 5px;
-    top: -2px;
-    
+.email {
+    grid-column: 1 / 3;
+}
+
+.endereco-titulo {
+    position: relative;
+    width: 87px;
+    height: 16px;
+    left: 10px;
+    top: -25px;
     font-family: 'Roboto';
     font-style: normal;
     font-weight: 700;
+    font-size: 16px;
+    line-height: 16px;
+}
+
+.endereco {
+
+    position: relative;
+    width: 87px;
+    height: 16px;
+    left: 56px;
+    top: -25px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
     font-size: 14px;
-    line-height: 20px;
-    
+    line-height: 16px;
+
     color: #505050;
 }
+
+.bloco-endereco{
+   
+    margin-top: 20px;
+}
+
+.ellipse {
+    display: inline;
+    background-color:#061B2E ;
+    
+}
+
