--- a/assets/styles.css
+++ b/assets/styles.css
@@ -12,7 +12,8 @@ body {
 
     height: 100vh;
     width: 100vw;
-   
+    overflow: hidden;
+
 }
 
 hr {
@@ -28,21 +29,23 @@ a {
 }
 
 section {
-
+    height: 100%;
     display: flex;
-    flex-wrap: wrap;
+    
+
 }
 
 
 .principal {
     width: 50%;
-    margin: 29px 0px 0px 32px
+    margin: 29px 0px 0px 0px;
+    padding-left: 32px;
 }
 
 .titulo {
     width: 219px;
     height: 26px;
-    margin-top: 42px;
+    margin-top: 78px;
     font-family: 'Nunito';
     font-style: normal;
     font-weight: 700;
@@ -57,7 +60,7 @@ section {
 }
 
 .subtitulo {
-    width: 445px;
+    width: 618px;
     height: 31px;
     margin-top: 26px;
     font-family: 'Roboto';
@@ -76,7 +79,7 @@ section {
     grid-template-columns: 200px 200px;
     grid-template-rows: 1fr 1fr;
     gap: 20px;
-    
+
 
 }
 
@@ -139,14 +142,17 @@ section {
     color: #505050;
 }
 
-.bloco-endereco{
-   
+.bloco-endereco {
+
     margin-top: 20px;
 }
 
 .ellipse {
     display: inline;
-    background-color:#061B2E ;
-    
+    background-color: #061B2E;
+    width: 50%;
+    height: 100%;
+    -webkit-border-radius: 438px 0px 0px 512px;
+    -moz-border-radius: 145px 0px 0px 146px;
+    scale: 1.3;
 }
-
