--- a/assets/styles.css
+++ b/assets/styles.css
@@ -18,20 +18,20 @@ body {
 
 hr {
     margin-top: 2px;
-    width: 20%;
-    border: 2px solid;
-    border-radius: 25%;
+    width: 19%;
+    height: 5px;
+    background-color: rgb(6 27 46);
 }
 
 a {
     text-decoration: none;
-    color: black;
+    color: #000000;
 }
 
 section {
     height: 100%;
     display: flex;
-    
+
 
 }
 
@@ -90,7 +90,7 @@ section {
 } */
 
 .icons {
-    width: 42;
+    width: 42px;
     height: 42px;
 
 }
@@ -155,4 +155,89 @@ section {
     -webkit-border-radius: 438px 0px 0px 512px;
     -moz-border-radius: 145px 0px 0px 146px;
     scale: 1.3;
+    margin-left: 50px;
+}
+
+.titulo2 {
+    height: 100px;
+    margin-left: 150px;
+    padding-top: 172px;
+    font-family: 'Nunito';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 54px;
+    line-height: 110%;
+    /* or 46px */
+
+
+
+    letter-spacing: -0.025em;
+
+    color: #FFFFFF;
+
+}
+
+.subtitulo2 {
+    color: #FFFFFF;
+    margin: 75px 0px 0px 150px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 18px;
+
+    color: #ffffffef;
+}
+
+
+.qrcode-bloco {
+    display: flex;
+    flex-direction: column;
+    margin: 45px 0 0 320px;
+
+}
+
+.qrcode {
+    width: 180px;
+    height: 177.531px;
+
+}
+
+.url {
+    color: #FFFFFF;
+    margin-top: 15px;
+
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+
+    color: #FFFFFF;
+}
+
+.url a {
+    display: block;
+    color: #FFFFFF;
+    margin-left: -27px;
+    padding-top: 20px;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 16px;
+}
+
+img:hover {
+    -webkit-transition: all 0.7s ease;
+
+    -webkit-transform: scale(1.2);
+    transform: scale(1.2);
+
+}
+
+hr:hover {
+    width: 100px;
+    transition: all 0.7s ease-in-out;
 }
